--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "main": "dist/index.js",
   "scripts": {
     "start": "node dist/index.js",
-    "dev": "node src/index.ts",
+    "dev": "nodemon src/index.ts",
     "build": "tsc",
     "data:import": "ts-node src/utils/seeder.ts",
     "data:destroy": "ts-node src/utils/seeder.ts -d"
