--- a/server/package.json
+++ b/server/package.json
@@ -6,8 +6,12 @@
     "start": "node dist/index.js",
     "dev": "nodemon src/index.ts",
     "build": "tsc",
+    "render-build": "npm install && npm run build",
     "data:import": "ts-node src/utils/seeder.ts",
     "data:destroy": "ts-node src/utils/seeder.ts -d"
+  },
+  "engines": {
+    "node": ">=16.0.0"
   },
   "keywords": [],
   "author": "",
