--- a/client/.env.example
+++ b/client/.env.example
@@ -1,2 +1,2 @@
 # API URL - Override the default API URL in api.ts if needed
-VITE_API_URL=https://your-custom-api-url.com/api 
+VITE_API_URL=https://coffee-shop-1.onrender.com/api 
