--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,7 @@
     "start": "node dist/index.js",
     "dev": "nodemon src/index.ts",
     "build": "tsc",
-    "render-build": "npm install && npm run build",
+    "render-build": "npm install && npm install --save-dev @types/node @types/express @types/cors @types/jsonwebtoken @types/bcrypt && npm run build",
     "data:import": "ts-node src/utils/seeder.ts",
     "data:destroy": "ts-node src/utils/seeder.ts -d"
   },
