--- a/server/.env.example
+++ b/server/.env.example
@@ -2,4 +2,4 @@ PORT=5000
 MONGODB_URI=mongodb://localhost:27017/coffee-shop
 JWT_SECRET=your_secure_jwt_secret_string
 NODE_ENV=production
-FRONTEND_URL=https://your-frontend-domain.com 
+FRONTEND_URL=https://coffee-shop-lemon-nine.vercel.app
